# lua-lcd-gadget

./: .gitmodules  CMakeLists.txt  README.md  example.lua  gadget.c  gadget.h  incbin.h  lcd.c  lcd.h  lua_gpio.c  lua_gpio.h  lua_lcd.c  lua_lcd.h  main.lua  modules.c  modules.h  notes.txt  stubs.c  util.lua
lua/: CMakeLists.txt  example.lua  main.lua  pinout.lua  util.lua
